test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/3.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:d8b0da0e8bf07a277023a76e4e5630177d6662e56c12050561f20bcd580bf881
size 4560251
